user/update、user/getの修正
